make a message processing frame

--- a/thconcurrent_frame/src/client/makefile
+++ b/thconcurrent_frame/src/client/makefile
@@ -9,7 +9,7 @@ all:$(OBJS) $(TARGET)
 %.o:%.c
 	$(CC) $^ $(CCFLAGS) -o $@
 
-$(TARGET):$(OBJS)
+$(TARGET):$(OBJS) $(ADDONSOBJS)
 	$(CC) $^ $(CFLAGS) -o $@
 
 run:all
