--- a/thconcurrent_frame/src/mhthread_dll/makefile
+++ b/thconcurrent_frame/src/mhthread_dll/makefile
@@ -2,7 +2,8 @@ include ../makefile.def
 
 LIBSPATH=../../lib
 LIBS=libmhthread
-TARGET=$(LIBS).so $(LIBS).a
+#TARGET=$(LIBS).so $(LIBS).a
+TARGET=$(LIBS).a
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 
@@ -11,9 +12,9 @@ all:$(OBJS) $(TARGET)
 %.o:%.c
 	$(CC) $< $(CCFLAGS) -o $@
 
-$(LIBS).so:$(OBJS)
-	$(CC) -Wall -shared $^ -o $@
-	cp -dpR $(LIBS).so $(LIBSPATH)/
+#$(LIBS).so:$(OBJS)
+#	$(CC) -Wall -shared $^ -o $@
+#	cp -dpR $(LIBS).so $(LIBSPATH)/
 
 $(LIBS).a:$(OBJS)
 	ar r $@ $^
